# weather-cli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PRD.md  README.md  app.py  license_generator.py  license_manager.py  pyproject.toml  setup.py  weather-cli.spec  weather_cli.spec
.github/workflows/: main.yml
weather_cli/: __init__.py  app.py  license_generator.py  license_manager.py
